packages/svelte/tests/compiler-errors/samples/css/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'invalid_css_identifier',
		message: 'Expected a valid CSS identifier',
		position: [25, 25]
	}
});
